--- a/pwsh/settings.json
+++ b/pwsh/settings.json
@@ -3,19 +3,19 @@
 	"$schema": "https://aka.ms/terminal-profiles-schema",
 	"actions": [
 		{
-			"command": "find",
-			"keys": "ctrl+shift+f"
+			"command": {
+				"action": "copy",
+				"singleLine": false
+			},
+			"keys": "ctrl+c"
 		},
 		{
 			"command": "paste",
 			"keys": "ctrl+v"
 		},
 		{
-			"command": {
-				"action": "copy",
-				"singleLine": false
-			},
-			"keys": "ctrl+c"
+			"command": "find",
+			"keys": "ctrl+shift+f"
 		},
 		{
 			"command": {
@@ -29,9 +29,9 @@
 	"copyFormatting": "none",
 	"copyOnSelect": false,
 	"defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-	"initialCols": 115,
-	"initialPosition": "965,105",
-	"initialRows": 52,
+	"initialCols": 113,
+	"initialPosition": "975,200",
+	"initialRows": 40,
 	"profiles": {
 		"defaults": {
 			"colorScheme": "TokyoNightStorm",
@@ -61,7 +61,7 @@
 			},
 			{
 				"font": {
-					"weight": "extra-light"
+					"weight": "semi-bold"
 				},
 				"guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
 				"hidden": false,
@@ -81,13 +81,13 @@
 				"source": "Windows.Terminal.Wsl"
 			},
 			{
-				"guid": "{5b558f3c-0077-50cf-892b-fd83af2f306a}",
+				"guid": "{239dfb00-e418-5c0c-a18b-38f7393d2a9a}",
 				"hidden": false,
 				"name": "Developer Command Prompt for VS 2022",
 				"source": "Windows.Terminal.VisualStudio"
 			},
 			{
-				"guid": "{94d8df91-85d7-5489-8b1d-1477ea5b0905}",
+				"guid": "{6d2d7cc1-9a27-5b26-9903-f43acd1ec8f5}",
 				"hidden": false,
 				"name": "Developer PowerShell for VS 2022",
 				"source": "Windows.Terminal.VisualStudio"
