--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -68,9 +68,9 @@
 # extra-keys = [[ESC, TAB, CTRL, ALT, {key: '-', popup: '|'}, DOWN, UP]]
 
 ### Two rows with more keys
-extra-keys = [['ESC','/','-','=','#','*','PGUP'], \
-              ['TAB','~','|','UP','$','_','PGDN'], \
-	      ['CTRL', 'ALT', 'LEFT', 'DOWN', 'RIGHT', 'HOME', 'END']]
+extra-keys = [['ESC','$','-','=','#','PGUP','PGDN'], \
+              ['ALT','*','/','_','HOME','UP','END'], \
+	      ['TAB', 'CTRL', '~', '|', 'LEFT', 'DOWN', 'RIGHT']]
 
 ### Configuration with additional popup keys (swipe up from an extra key)
 # extra-keys = [[ \
