--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,16 @@
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'dracula/tmux'
+
+run '~/.tmux/plugins/tpm/tpm'
+
+
 set -g default-terminal "screen-256color"
 
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
-
 set -g mouse on
+
+set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @dracula-show-powerline true
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon window
