--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,3 +12,6 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g default-terminal "screen-256color"
 set -g mouse on
+set -g base-index 1
+set -g pane-base-index 1
+set-option -g renumber-windows on
