adding cpu usage and temp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'dracula/tmux'
 
-set -g @dracula-plugins "cpu-usage"
+set -g @dracula-plugins "time"
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon window
