--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'dracula/tmux'
 
 set -g @dracula-plugins "time"
@@ -15,3 +16,4 @@ set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
+unbind -T copy-mode MouseDragEnd1Pane
