--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,14 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'dracula/tmux'
 
-set -g @dracula-plugins "time"
+
+set -g @dracula-plugins "time custom:ip.sh"
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
-set -g @dracula-show-left-icon window
+set -g @dracula-show-left-icon "#h | #S"
 
 run '~/.tmux/plugins/tpm/tpm'
 
